added complete event api
