# src/config/swagger.yaml
@@ -705,7 +705,49 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
 
-      
+  /events/{eventId}/complete:
+    put:
+      tags:
+      - "event"
+      summary: "Mark an event to complete"
+      description: "Mark an event to complete, only when it's fully booked"
+      operationId: "completeEvent"
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: eventId
+          description: event id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        description: request body
+        content:
+          application/json:
+            schema:
+              type: "object"
+              required:
+                - status
+              properties:
+                status:
+                  type: "string"
+                  enum: ["completed"]
+      responses:
+        200:
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event'
+        default:
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+
 
   /events/price-schema:
     get:
@@ -1126,6 +1168,9 @@ components:
         price:
           type: "integer"
           format: "int32"
+        discountRule:
+          type: "object"
+          $ref: '#/components/schemas/DiscountRule'
 
 
     EventDetails:
@@ -1138,10 +1183,9 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/PriceWeeklySchema'
-            discountRules:
-              type: array
-              items:
-                $ref: '#/components/schemas/DiscoutRule'
+            discountRule:
+              type: object
+              $ref: '#/components/schemas/DiscoutRule'
             members:
               type: array
               items:
