# src/routes/events.routes.ts
@@ -11,12 +11,12 @@ export class EventsRoutes {
 
     app
       .route('/events')
-      .get((req: Request, res: Response, next: NextFunction) => {
-        // middleware
-        console.log(`Request from: ${req.originalUrl}`);
-        console.log(`Request type: ${req.method}`);
-        next();
-      }, this.eventsController.getEvents)
+      // .get((req: Request, res: Response, next: NextFunction) => {
+      //   // middleware
+      //   console.log(`Request from: ${req.originalUrl}`);
+      //   console.log(`Request type: ${req.method}`);
+      //   next();
+      // }, this.eventsController.getEvents)
       .post(verifyToken, permit({ domain: 'event', operations: ['update'] }), this.eventsController.addEvent);
 
     app.route('/events/:scriptId/:shopId').get(this.eventsController.getEventsByScriptAndShop);
@@ -31,5 +31,7 @@ export class EventsRoutes {
     app.route('/events/:eventId/join').post(verifyToken, permit({ domain: 'event-user', operations: ['create'] }), this.eventsController.joinUserEvent);
     app.route('/events/:eventId/users/cancel').put(verifyToken, permit({ domain: 'event-user', operations: ['update'] }), this.eventsController.cancelEventUser);
     app.route('/events/:eventId/users/update-status').put(verifyToken, permit({ domain: 'event-user', operations: ['delete'] }), this.eventsController.updateEventUserStatus);
+
+    app.route('/events/:eventId/complete').put(verifyToken, permit({ domain: 'event', operations: ['update'] }), this.eventsController.completeEvent);
   }
 }
